feat(dashboard): Nv 5660 dashboard implement the digest block variables in the (#8097)
Co-authored-by: Paweł <pawel.tymczuk@gmail.com>
Co-authored-by: Paweł Tymczuk <LetItRock@users.noreply.github.com>

--- a/apps/dashboard/src/index.css
+++ b/apps/dashboard/src/index.css
@@ -354,3 +354,13 @@
     scroll-behavior: smooth;
   }
 }
+
+/* Chrome, Safari and Opera */
+.nv-no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.nv-no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
