feat(js,api,dashboard): snooze inbox functionality (#8228)
Co-authored-by: Adam Chmara <adam.chmara1@gmail.com>

--- a/packages/js/src/ui/index.css
+++ b/packages/js/src/ui/index.css
@@ -335,6 +335,17 @@
   ::-webkit-scrollbar-corner {
     background-color: transparent;
   }
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Hide spin buttons in Firefox */
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
 }
 
 @tailwind components;
